<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface"
    tools:context=".ui.detail.DetailActivity"
    tools:ignore="Overdraw">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:cardElevation="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/detailIvLogo"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/no_image"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/iv_cd_article"/>

                    <androidx.core.widget.NestedScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginVertical="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tv_title_article_default"
                                android:textSize="18sp"
                                android:textStyle="bold"/>

                            <TextView
                                android:id="@+id/tv_author"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/tv_owner_article_default"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/tv_published_at"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tv_time_article_default"
                                android:textSize="14sp" />
                        </LinearLayout>
                    </androidx.core.widget.NestedScrollView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/detailFabFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="-30dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/fab_btn_favorite"
                android:src="@drawable/ic_favorite_inactive"
                android:backgroundTint="@color/colorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/tv_detail_title_article"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailTvDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginHorizontal="10dp"
                android:text="@string/tv_description_article_default"
                android:textSize="14sp"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/detailBtnLink"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:text="@string/btn_open_link"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>